--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -9,6 +9,44 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 .schFrm input[type="radio"]:checked + label { background: #41ff3b5a;}
 
 .dateSelec { margin-top: 20px; display: flex; align-items: center; }
-.dateSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 66px; margin-right: 40px; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 17px; font-family: pBold; }
+.dateSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 55px; margin-right: 40px; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 17px; font-family: pBold; }
 .dateSelec .dateInput { display: flex; align-items: center; justify-content: space-around; }
-.dateSelec .datePick { font-size: 17px; font-family: pMedium;}
+.dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px;}
+.dateSelec .dpDiv::before { content: ''; position: absolute; top: 27%; left: 7%; width: 20px; height: 20px; background: url(../source/dateGr.png) center center; background-size: cover;}
+.dpDiv .datePick {  font-size: 17px; font-family: pRegular; }
+
+/*  */
+
+.detailWrtie { margin: 30px 0 70px 0; } 
+
+.mapInfoAll { display: flex; align-items: center; justify-content: space-between;}
+
+.schMap { width: calc(100vw * 650 / 1920); height: calc(100vw * 900 / 1920); border-radius: 10px; border: 2px solid #ddd;}
+
+.schInfo { display: flex; align-items: center; flex-direction: column; justify-content: flex-start; width: calc(100vw * 800 / 1920); height: calc(100vw * 840 / 1920); border-radius: 10px; padding: 30px; border: 1px solid #ddd;}
+
+.infoTitle { width: 100%; margin-bottom: 30px; display: flex; align-items: center; justify-content: space-between; font-size: 17px; font-family: pSemi;}
+.infoTitle .btn { opacity: .5; cursor: pointer; transition: all .2s;}
+.infoTitle .btn:hover { opacity: 1; }
+.infoTitle .backBtn { width: 18px; height: 18px; background: url(../source/arrow_l.png) center center; background-size: cover;  }
+.infoTitle .delBtn { width: 24px; height: 24px; background: url(../source/delIco.png) center center; background-size: cover; }
+
+.schInfo .schDays { width: 100%; height: 65px; margin-bottom: 30px; display: flex; align-items: center; justify-content: center; color: #000000d1; background: #8242f024; border-radius: 10px; font-family: pRegular; font-size: 18px; letter-spacing: 1px; }
+
+.schInfo .schLoc { width: 100%; position: relative; margin: 0 0 40px 100px; font-size: 17px; }
+.schInfo .schLoc::before { position: absolute; top: -15%; left: -5%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 23px; height: 23px; }
+
+.daySch { width: 100%; height: 690px; padding-top: 10px; overflow-y: scroll; }
+.daySch::-webkit-scrollbar { width: 7px; } 
+.daySch::-webkit-scrollbar-thumb { background-color: #cecece; border: 3px solid transparent; border-radius: 20px; } 
+.daySch::-webkit-scrollbar-track { background-color: transparent; } 
+
+.daySch .dNum { padding: 6px 15px; margin-right: 10px; background: var(--yellow); color: #333; border-radius: 15px;}
+.daySch .date { padding: 5px 15px; border-left: 1px solid var(--color-line); color: #555; font-size: 14px; }
+
+.dayOne { margin-bottom: 50px;} 
+.dayTxt { margin: 0 0 30px 20px;}
+.daySch .schMemo { margin: 0 0 20px 30px; display: flex; align-items: center; }
+.daySch .schMemo .memoCnt { margin-right: 20px; display: flex; align-items: center; justify-content: center; width: 23px; height: 23px; background: var(--color-main); color: #fff; font-family: pRegular; font-size: 15px; border-radius: 15px; }
+.daySch .schMemo .memoTxt { width: 85%; padding: 15px; border: 1px solid var(--color-line); border-radius: 10px; font-size: 15px; }
+.mNone { color: #888;}
