--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -1,54 +1,69 @@
-section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 200px; }
+section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 200px; } 
 
-.selecAll { padding: 20px; border: 1px solid #ddd; border-radius: 10px; }
+.selecAll { padding: 20px; border: 1px solid #ddd; border-radius: 10px; } 
 
-.opLine { display: flex; align-items: center; }
-.opLine span { display: flex; align-items: center; justify-content: center; width: 260px; height: 60px; margin-right: 40px; background: #eee; font-size: 15px; font-family: pBold;}
-.schFrm input[type="radio"] { display: none; }
-.schFrm input[type="radio"] + label {padding: 7px 16px; margin-right: 13px; border-radius: 20px; font-size: 15px; font-family: pRegular; cursor: pointer; transition: all .2s;}
-.schFrm input[type="radio"]:checked + label { background: #41ff3b5a;}
+.opLine { display: flex; align-items: center; } 
+.opLine span { display: flex; align-items: center; justify-content: center; width: 260px; height: 60px; margin-right: 40px; background: #eee; font-size: 15px; font-family: pBold; } 
+.schFrm input[type="radio"] { display: none; } 
+.schFrm input[type="radio"] + label { padding: 7px 16px; margin-right: 13px; border-radius: 20px; font-size: 15px; font-family: pRegular; cursor: pointer; transition: all .2s; } 
+.schFrm input[type="radio"]:checked + label { background: #41ff3b5a; } 
 
-.dateSelec { margin-top: 15px; display: flex; align-items: center; }
-.dateSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold; }
-.dateSelec .dateInput { display: flex; align-items: center; justify-content: space-around; }
-.dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px;}
-.dateSelec .dpDiv::before { content: ''; position: absolute; top: 27%; left: 7%; width: 20px; height: 20px; background: url(../source/dateGr.png) center center; background-size: cover;}
-.dpDiv .datePick {  font-size: 14px; font-family: pRegular; }
+.dateSelec { margin-top: 15px; display: flex; align-items: center; } 
+.dateSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold; } 
+.dateSelec .dateInput { display: flex; align-items: center; justify-content: space-around; } 
+.dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px; } 
+.dateSelec .dpDiv::before { content: ''; position: absolute; top: 27%; left: 7%; width: 20px; height: 20px; background: url(../source/dateGr.png) center center; background-size: cover; } 
+.dpDiv .datePick { font-size: 14px; font-family: pRegular; } 
 
-/*  */
+/* */
 
 .detailWrite { margin: 30px 0 70px 0; } 
 
-.mapInfoAll { display: flex; align-items: center; justify-content: space-between;}
+.mapInfoAll { display: flex; align-items: center; justify-content: space-between; } 
 
-.schMap { width: calc(100vw * 580 / 1920); height: calc(100vw * 900 / 1920); border-radius: 10px; border: 2px solid #ddd;}
+.schMap { width: calc(100vw * 580 / 1920); height: calc(100vw * 900 / 1920); border-radius: 10px; border: 2px solid #ddd; } 
 
-.schInfo { display: flex; align-items: center; flex-direction: column; justify-content: flex-start; width: calc(100vw * 750 / 1920); height: calc(100vw * 840 / 1920); border-radius: 10px; padding: 30px; border: 1px solid #ddd;}
+.schInfo { display: flex; align-items: center; flex-direction: column; justify-content: flex-start; width: calc(100vw * 750 / 1920); height: calc(100vw * 840 / 1920); border-radius: 10px; padding: 30px; border: 1px solid #ddd; } 
 
-.infoTitle { width: 100%; margin-bottom: 30px; display: flex; align-items: center; justify-content: space-between; font-size: 17px; font-family: pSemi;}
-.infoTitle .btn { opacity: .5; cursor: pointer; transition: all .2s;}
-.infoTitle .btn:hover { opacity: 1; }
-.infoTitle .backBtn { width: 18px; height: 18px; background: url(../source/arrow_l.png) center center; background-size: cover;  }
+.infoTitle { width: 100%; margin-bottom: 30px; display: flex; align-items: center; justify-content: space-between; font-size: 17px; font-family: pSemi; } 
+.infoTitle .btn { opacity: .5; cursor: pointer; transition: all .2s; } 
+.infoTitle .btn:hover { opacity: 1; } 
+.infoTitle .backBtn { width: 18px; height: 18px; background: url(../source/arrow_l.png) center center; background-size: cover; } 
 
-.schInfo .schDays { width: 100%; height: 65px; margin-bottom: 30px; display: flex; align-items: center; justify-content: center; color: #000000d1; background: #8242f024; border-radius: 10px; font-family: pRegular; font-size: 18px; letter-spacing: 1px; }
+.schInfo .schDays { width: 100%; height: 65px; margin-bottom: 30px; display: flex; align-items: center; justify-content: center; color: #000000d1; background: #8242f024; border-radius: 10px; font-family: pRegular; font-size: 18px; letter-spacing: 1px; } 
 
-.schInfo .schLoc { width: 100%; position: relative; margin: 0 0 40px 100px; font-size: 17px; }
-.schInfo .schLoc::before { position: absolute; top: -15%; left: -5%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 23px; height: 23px; }
+.schInfo .schLoc { width: 100%; position: relative; margin: 0 0 40px 100px; font-size: 17px; } 
+.schInfo .schLoc::before { position: absolute; top: -15%; left: -5%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 23px; height: 23px; } 
 
-.daySch { width: 100%; height: 690px; padding-top: 10px; overflow-y: scroll; }
+.daySch { width: 100%; height: 690px; padding-top: 10px; overflow-y: scroll; } 
 .daySch::-webkit-scrollbar { width: 7px; } 
 .daySch::-webkit-scrollbar-thumb { background-color: #cecece; border: 3px solid transparent; border-radius: 20px; } 
 .daySch::-webkit-scrollbar-track { background-color: transparent; } 
 
-.daySch .dNum { padding: 6px 15px; margin-right: 10px; background: var(--yellow); color: #333; border-radius: 15px;}
-.daySch .date { padding: 5px 15px; border-left: 1px solid var(--color-line); color: #555; font-size: 14px; }
+.daySch .dNum { padding: 6px 15px; margin-right: 10px; background: var(--yellow); color: #333; border-radius: 15px; } 
+.daySch .date { padding: 5px 15px; border-left: 1px solid var(--color-line); color: #555; font-size: 14px; } 
 
 .dayOne { margin-bottom: 50px; } 
-.dayTxt { margin: 0 0 30px 20px;}
-.daySch .schMemo { margin: 0 0 20px 30px; display: flex; align-items: center; }
-.daySch .schMemo .memoCnt { margin-right: 20px; display: flex; align-items: center; justify-content: center; width: 23px; height: 23px; background: var(--color-main); color: #fff; font-family: pRegular; font-size: 15px; border-radius: 15px; }
-.daySch .schMemo .memoTxt { width: 85%; padding: 15px; border: 1px solid var(--color-line); border-radius: 10px;  font-family: pRegular; font-size: 15px; }
-.mNone { color: #888;}
+.dayTxt { margin: 0 0 30px 20px; } 
+.daySch .schMemo { margin: 0 0 20px 30px; display: flex; align-items: center; } 
+.daySch .schMemo .memoCnt { margin-right: 20px; display: flex; align-items: center; justify-content: center; width: 23px; height: 23px; background: var(--color-main); color: #fff; font-family: pRegular; font-size: 15px; border-radius: 15px; } 
+.daySch .schMemo .memoTxt { width: 85%; padding: 15px; border: 1px solid var(--color-line); border-radius: 10px; font-family: pRegular; font-size: 15px; } 
+.mNone { color: #888; } 
 
-.dayOne .locAdd { margin-left: 43%; padding: 10px 15px; border-radius: 10px; background: #e8e8e8; font-size: 15px; font-family: pRegular; transition: all .2s; cursor: pointer; }
-.locAdd:hover { background: #ffd4389f; }
+.dayOne .locAdd { margin-left: 43%; padding: 10px 15px; border-radius: 10px; background: #e8e8e8; font-size: 15px; font-family: pRegular; transition: all .2s; cursor: pointer; } 
+.locAdd:hover { background: #ffd4389f; } 
+
+/* --------------------- modal ---------------------------- */
+.locModal { position: fixed; top: 20%; left: 30%; padding: 50px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 10px; background-color: #fff; box-shadow: 2px 2px 10px #ddd; z-index: 1000; } 
+.locModal h4 { text-align: center; font-size: 22px; font-family: pSemi; } 
+
+.addLocTxt { margin: 20px 0; width: 90%; height: 50px; padding: 0 20px; border-radius: 10px; font-size: 15px; font-family: pLight; background: #eee; } 
+.locModal input[name="ds"] { display: none; } 
+
+input[name="ds"] + label { width: 100%; display: flex; align-items: center; justify-content: space-between; cursor: pointer; } 
+input[name="ds"] + label span { font-size: 17px; }
+input[name="ds"] + label .check { width: 25px; height: 25px; border: 2px solid #ddd; border-radius: 7px; } 
+
+input[name="ds"]:checked + label .check { position: relative; } 
+input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; background-color: var(--color-main); border: var(--color-main); border-radius: 7px; font-size: 25px; width: 27px; height: 27px; text-align: center; position: absolute; left: -1px; top: -1px; } 
+
