--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -54,16 +54,24 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 200px; }
 .locAdd:hover { background: #ffd4389f; } 
 
 /* --------------------- modal ---------------------------- */
-.locModal { position: fixed; top: 20%; left: 30%; padding: 50px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 10px; background-color: #fff; box-shadow: 2px 2px 10px #ddd; z-index: 1000; } 
-.locModal h4 { text-align: center; font-size: 22px; font-family: pSemi; } 
+.locModal { position: fixed; top: 20%; left: 32%; padding: 60px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #ddd; z-index: 1000; } 
+.locModal h4 { text-align: center; font-size: 24px; font-family: pSemi; } 
 
-.addLocTxt { margin: 20px 0; width: 90%; height: 50px; padding: 0 20px; border-radius: 10px; font-size: 15px; font-family: pLight; background: #eee; } 
+.addLocTxt { margin: 30px 0 10px 0; width: 90%; height: 50px; padding: 0 20px; border-radius: 10px; font-size: 15px; font-family: pLight; background: #eee; } 
+.locAll { margin: 10px 0; height: 380px; overflow: auto; }
 .locModal input[name="ds"] { display: none; } 
 
-input[name="ds"] + label { width: 100%; display: flex; align-items: center; justify-content: space-between; cursor: pointer; } 
-input[name="ds"] + label span { font-size: 17px; }
+input[name="ds"] + label { width: 100%; position: relative; display: flex; align-items: center; justify-content: center; margin: 22px 0; padding-bottom: 20px; border-bottom: 1px solid var(--color-line); cursor: pointer; } 
+input[name="ds"] + label::before { content: ""; position: absolute; width: 27px; height: 27px; top: 0; left: 15px; background: url(../source/loc.png) center center; background-size: cover;}
+input[name="ds"] + label span { width: 79%; margin-left: 33px; font-size: 18px; font-family: pSemi; }
 input[name="ds"] + label .check { width: 25px; height: 25px; border: 2px solid #ddd; border-radius: 7px; } 
 
 input[name="ds"]:checked + label .check { position: relative; } 
 input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; background-color: var(--color-main); border: var(--color-main); border-radius: 7px; font-size: 25px; width: 27px; height: 27px; text-align: center; position: absolute; left: -1px; top: -1px; } 
+
+.locModal .addBtn { display: block; margin: 0 auto; padding: 8px 15px; border-radius: 10px; font-size: 16px; font-family: pMedium;}
+
+.cls { position: absolute; padding: 10px; top: 25px; right: 25px; border-radius: 8px; transition: all .3s; cursor: pointer;}
+.cls:hover { background: #8242f024;}
+.clsBtn {  width: 17px; height: 17px;  background: url(../source/closeIco.png) center center; background-size: cover; cursor: pointer; }
 
