--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -11,18 +11,49 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 200px; }
 .dateSelec { margin-top: 15px; display: flex; align-items: center; } 
 .dateSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold; } 
 .dateSelec .dateInput { display: flex; align-items: center; justify-content: space-around; } 
-.dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px; } 
+.dateSelec .dpDiv { position: relative; display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border: 1px solid #ddd; border-radius: 5px; transition: all .2s; } 
 .dateSelec .dpDiv::before { content: ''; position: absolute; top: 27%; left: 7%; width: 20px; height: 20px; background: url(../source/dateGr.png) center center; background-size: cover; } 
-.dpDiv .datePick { font-size: 14px; font-family: pRegular; } 
+.dateSelec .dpDiv:focus-within { border-color: #2ce126; } 
+.dpDiv .datePick { width: 100%; font-size: 14px; font-family: pRegular; } 
 
-/* */
+/* ----------- date custom --------------*/
+
+.ui-datepicker { top: 712px !important; width: 250px !important; } 
+.ui-widget.ui-widget-content { /* 전체 박스 */
+border:0px; box-shadow: 2px 2px 8px #a4a4a44b; padding:0; border-radius: 10px; } 
+.ui-widget-header { /* 헤더 (화살표/날짜표시 영역) */ font-size: 15px; border: 0px; border-radius: 0px; } 
+.ui-widget-header .ui-icon { /* 이전,다음 화살표 */
+background: none; } 
+.ui-datepicker-prev span { display: none !important; } 
+.ui-datepicker-next span { display: none !important; } 
+.ui-datepicker-prev { /* 이전 화살표 */
+width: 23px !important; height: 23px !important; border-radius: 50% !important; text-align:center; line-height: 1.5em; cursor: pointer; } 
+.ui-datepicker-prev::before { content:'\02C2'; } 
+.ui-datepicker-next { /* 다음 화살표 */
+width: 23px !important; height: 23px !important; border-radius: 50% !important; text-align:center; line-height: 1.5em; cursor: pointer; } 
+.ui-datepicker-next::before { content:'\02C3'; } 
+
+.ui-datepicker .ui-datepicker-header { background: #fff; border-radius: 10px 10px 0 0; } 
+.ui-datepicker .ui-datepicker-title { color: var(--color-main); } 
+.ui-datepicker .ui-datepicker-title .ui-datepicker-year { width: 70px; font-family: pRegular; } 
+.ui-datepicker .ui-datepicker-title .ui-datepicker-month { width: 70px; font-family: pRegular; } 
+.ui-datepicker th { /* 요일 영역 */ background : #955ef5; } 
+.ui-datepicker th span { /* 요일 텍스트 */ font-size:14px; color: #fff; font-family: pRegular; } 
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active { /* 일자 기본영역 */
+border:0px; background: none; font-family: pLight; font-size: 13px; text-align: center; width: 22px; height: 22px; line-height: 22px; padding:0; border-radius: 3px; margin: 0 auto; } 
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight { /* 오늘일자 */
+border:0px; background:var(--yellow) !important; color: #000 !important; } 
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover { /* 선택 일자 */
+border: 1px solid var(--color-main) !important; background: var(--color-main) !important; } 
+/*-------------------------------------------------*/
+
 
 .detailWrite { margin: 30px 0 70px 0; } 
 
 .mapInfoAll { display: flex; align-items: center; justify-content: space-between; } 
 
 .schMap { width: calc(100vw * 580 / 1920); height: calc(100vw * 900 / 1920); border-radius: 10px; border: 2px solid #ddd; } 
-
 .schInfo { display: flex; align-items: center; flex-direction: column; justify-content: flex-start; width: calc(100vw * 750 / 1920); height: calc(100vw * 840 / 1920); border-radius: 10px; padding: 30px; border: 1px solid #ddd; } 
 
 .infoTitle { width: 100%; margin-bottom: 30px; display: flex; align-items: center; justify-content: space-between; font-size: 17px; font-family: pSemi; } 
@@ -54,24 +85,34 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 200px; }
 .locAdd:hover { background: #ffd4389f; } 
 
 /* --------------------- modal ---------------------------- */
-.locModal { position: fixed; top: 20%; left: 32%; padding: 60px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #ddd; z-index: 1000; } 
+.modalBg { visibility: hidden; opacity: 0; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.599); z-index: 50; transition: all .3s ease; } 
+.modalBg.active { visibility: visible; opacity: 1; } 
+.locModal { position: relative; margin: 200px auto; padding: 60px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #1818189c; z-index: 1000; } 
 .locModal h4 { text-align: center; font-size: 24px; font-family: pSemi; } 
 
-.addLocTxt { margin: 30px 0 10px 0; width: 90%; height: 50px; padding: 0 20px; border-radius: 10px; font-size: 15px; font-family: pLight; background: #eee; } 
-.locAll { margin: 10px 0; height: 380px; overflow: auto; }
+.schBox { margin: 30px 0 10px 0; display: flex; align-items: center; justify-content: space-between; border-radius: 10px; background: #eee; } 
+.schBox .addLocTxt { width: 90%; height: 50px; padding: 0 20px; background: transparent; font-size: 15px; font-family: pMedium; } 
+.schBox .locSchBtn { margin-right: 20px; width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; } 
+
+.locAll { margin: 10px 0; height: 380px; overflow: auto; } 
+.locAll::-webkit-scrollbar { width: 12px; } 
+.locAll::-webkit-scrollbar-thumb { background-color: #999; border: 3px solid #fff; border-radius: 20px; } 
+.locAll::-webkit-scrollbar-track { background-color: transparent; }
+
 .locModal input[name="ds"] { display: none; } 
 
 input[name="ds"] + label { width: 100%; position: relative; display: flex; align-items: center; justify-content: center; margin: 22px 0; padding-bottom: 20px; border-bottom: 1px solid var(--color-line); cursor: pointer; } 
-input[name="ds"] + label::before { content: ""; position: absolute; width: 27px; height: 27px; top: 0; left: 15px; background: url(../source/loc.png) center center; background-size: cover;}
-input[name="ds"] + label span { width: 79%; margin-left: 33px; font-size: 18px; font-family: pSemi; }
+input[name="ds"] + label::before { content: ""; position: absolute; width: 27px; height: 27px; top: 0; left: 15px; background: url(../source/loc.png) center center; background-size: cover; } 
+input[name="ds"] + label span { width: 79%; margin-left: 33px; font-size: 18px; font-family: pSemi; } 
 input[name="ds"] + label .check { width: 25px; height: 25px; border: 2px solid #ddd; border-radius: 7px; } 
 
 input[name="ds"]:checked + label .check { position: relative; } 
 input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; background-color: var(--color-main); border: var(--color-main); border-radius: 7px; font-size: 25px; width: 27px; height: 27px; text-align: center; position: absolute; left: -1px; top: -1px; } 
 
-.locModal .addBtn { display: block; margin: 0 auto; padding: 8px 15px; border-radius: 10px; font-size: 16px; font-family: pMedium;}
+.locModal .addBtn { display: block; margin: 20px auto 0 auto; padding: 8px 15px; border-radius: 10px; font-size: 16px; font-family: pMedium; cursor: pointer; transition: all .3s; } 
+.addBtn:hover { background: #ffd4389f; } 
 
-.cls { position: absolute; padding: 10px; top: 25px; right: 25px; border-radius: 8px; transition: all .3s; cursor: pointer;}
-.cls:hover { background: #8242f024;}
-.clsBtn {  width: 17px; height: 17px;  background: url(../source/closeIco.png) center center; background-size: cover; cursor: pointer; }
+.cls { position: absolute; padding: 10px; top: 25px; right: 25px; border-radius: 8px; transition: all .3s; cursor: pointer; } 
+.cls:hover { background: #8242f024; } 
+.clsBtn { width: 17px; height: 17px; background: url(../source/closeIco.png) center center; background-size: cover; cursor: pointer; } 
 
