--- a/css/cWriteGrp.css
+++ b/css/cWriteGrp.css
@@ -8,6 +8,16 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 200px; }
 .schFrm input[type="radio"] + label { padding: 7px 16px; margin-right: 13px; border-radius: 20px; font-size: 15px; font-family: pRegular; cursor: pointer; transition: all .2s; } 
 .schFrm input[type="radio"]:checked + label { background: #41ff3b5a; } 
 
+.teamSelec { margin-top: 15px; display: flex; align-items: center; } 
+.teamSelec .teamTxt { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold; } 
+.teamSelec .rangeAll { width: 60%; display: flex; align-items: center; } 
+.rangeAll .rangeValue { margin: 0 5px 0 10px; font-size: 16px; font-family: pSemi; } 
+.rangeAll .teamNum { margin-left: 30px; appearance: none; height: 6px; border-radius: 5px; background: #ededed; width: 100%; } 
+.teamNum::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 17px; height: 17px; border-radius: 50%; background: var(--dark-yellow); cursor: pointer; -webkit-transition: background 0.15s ease-in-out; transition: background 0.15s ease-in-out; } 
+
+.teamNum::-webkit-slider-thumb:hover { background: var(--yellow); } 
+.teamNum:active::-webkit-slider-thumb { background: var(--yellow); } 
+
 .dateSelec { margin-top: 15px; display: flex; align-items: center; } 
 .dateSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold; } 
 .dateSelec .dateInput { display: flex; align-items: center; justify-content: space-around; } 
@@ -18,7 +28,7 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 200px; }
 
 /* ----------- date custom --------------*/
 
-.ui-datepicker { top: 712px !important; width: 250px !important; } 
+.ui-datepicker { top: 780px !important; width: 250px !important; } 
 .ui-widget.ui-widget-content { /* 전체 박스 */
 border:0px; box-shadow: 2px 2px 8px #a4a4a44b; padding:0; border-radius: 10px; } 
 .ui-widget-header { /* 헤더 (화살표/날짜표시 영역) */ font-size: 15px; border: 0px; border-radius: 0px; } 
@@ -51,68 +61,16 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 
 .detailWrite { margin: 30px 0 70px 0; } 
 
-.mapInfoAll { display: flex; align-items: center; justify-content: space-between; } 
+.imgUpAll { background: #FFF; padding: 30px 20px; margin: 1em auto; min-height: 300px; border: 1px solid #ddd; border-radius: 10px; } 
+.imgUpAll span { font-size: 18px; font-family: pSemi;}
+#fileInput { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip:rect(0,0,0,0); border: 0; } 
+.fileLabel { position: relative; margin-top: 20px; display: flex; align-items: center; justify-content: center; width: 100%; height: 100%; cursor: pointer; opacity: .5; transition: all .2s;} 
+.fileLabel::before { content: ""; position: absolute; top: 34%; left: 48%; width: 64px; height: 64px; background: url(../source/imgIco.png) center center; background-size: cover; opacity: .4; z-index: 1; } 
+.fileLabel:hover { opacity: 0.9;}
 
-.schMap { width: calc(100vw * 580 / 1920); height: calc(100vw * 900 / 1920); border-radius: 10px; border: 2px solid #ddd; } 
-.schInfo { display: flex; align-items: center; flex-direction: column; justify-content: flex-start; width: calc(100vw * 750 / 1920); height: calc(100vw * 840 / 1920); border-radius: 10px; padding: 30px; border: 1px solid #ddd; } 
+.imgArea { display: flex; align-items: center; margin-top: 2em; width: 100%; height: 460px; overflow: hidden; background: #eee; border-radius: 8px; } 
+.imgArea img { width: 100%; } 
 
-.infoTitle { width: 100%; margin-bottom: 30px; display: flex; align-items: center; justify-content: space-between; font-size: 17px; font-family: pSemi; } 
-.infoTitle .btn { opacity: .5; cursor: pointer; transition: all .2s; } 
-.infoTitle .btn:hover { opacity: 1; } 
-.infoTitle .backBtn { width: 18px; height: 18px; background: url(../source/arrow_l.png) center center; background-size: cover; } 
-
-.schInfo .schDays { width: 100%; height: 65px; margin-bottom: 30px; display: flex; align-items: center; justify-content: center; color: #000000d1; background: #8242f024; border-radius: 10px; font-family: pRegular; font-size: 18px; letter-spacing: 1px; } 
-
-.schInfo .schLoc { width: 100%; position: relative; margin: 0 0 40px 100px; font-size: 17px; } 
-.schInfo .schLoc::before { position: absolute; top: -15%; left: -5%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 23px; height: 23px; } 
-
-.daySch { width: 100%; height: 690px; padding-top: 10px; overflow-y: scroll; } 
-.daySch::-webkit-scrollbar { width: 7px; } 
-.daySch::-webkit-scrollbar-thumb { background-color: #cecece; border: 3px solid transparent; border-radius: 20px; } 
-.daySch::-webkit-scrollbar-track { background-color: transparent; } 
-
-.daySch .dNum { padding: 6px 15px; margin-right: 10px; background: var(--yellow); color: #333; border-radius: 15px; } 
-.daySch .date { padding: 5px 15px; border-left: 1px solid var(--color-line); color: #555; font-size: 14px; } 
-
-.dayOne { margin-bottom: 50px; } 
-.dayTxt { margin: 0 0 30px 20px; } 
-.daySch .schMemo { margin: 0 0 20px 30px; display: flex; align-items: center; } 
-.daySch .schMemo .memoCnt { margin-right: 20px; display: flex; align-items: center; justify-content: center; width: 23px; height: 23px; background: var(--color-main); color: #fff; font-family: pRegular; font-size: 15px; border-radius: 15px; } 
-.daySch .schMemo .memoTxt { width: 85%; padding: 15px; border: 1px solid var(--color-line); border-radius: 10px; font-family: pRegular; font-size: 15px; } 
-.mNone { color: #888; } 
-
-.dayOne .locAdd { margin-left: 43%; padding: 10px 15px; border-radius: 10px; background: #e8e8e8; font-size: 15px; font-family: pRegular; transition: all .2s; cursor: pointer; } 
-.locAdd:hover { background: #ffd4389f; } 
-
-/* --------------------- modal ---------------------------- */
-.modalBg { visibility: hidden; opacity: 0; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.599); z-index: 50; transition: all .3s ease; } 
-.modalBg.active { visibility: visible; opacity: 1; } 
-.locModal { position: relative; margin: 200px auto; padding: 60px; width: 500px; height: 550px; border: 1px solid #ddd; border-radius: 15px; background-color: #fff; box-shadow: 2px 2px 10px #1818189c; z-index: 1000; } 
-.locModal h4 { text-align: center; font-size: 24px; font-family: pSemi; } 
-
-.schBox { margin: 30px 0 10px 0; display: flex; align-items: center; justify-content: space-between; border-radius: 10px; background: #eee; } 
-.schBox .addLocTxt { width: 90%; height: 50px; padding: 0 20px; background: transparent; font-size: 15px; font-family: pMedium; } 
-.schBox .locSchBtn { margin-right: 20px; width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; } 
-
-.locAll { margin: 10px 0; height: 380px; overflow: auto; } 
-.locAll::-webkit-scrollbar { width: 12px; } 
-.locAll::-webkit-scrollbar-thumb { background-color: #999; border: 3px solid #fff; border-radius: 20px; } 
-.locAll::-webkit-scrollbar-track { background-color: transparent; }
-
-.locModal input[name="ds"] { display: none; } 
-
-input[name="ds"] + label { width: 100%; position: relative; display: flex; align-items: center; justify-content: center; margin: 22px 0; padding-bottom: 20px; border-bottom: 1px solid var(--color-line); cursor: pointer; } 
-input[name="ds"] + label::before { content: ""; position: absolute; width: 27px; height: 27px; top: 0; left: 15px; background: url(../source/loc.png) center center; background-size: cover; } 
-input[name="ds"] + label span { width: 79%; margin-left: 33px; font-size: 18px; font-family: pSemi; } 
-input[name="ds"] + label .check { width: 25px; height: 25px; border: 2px solid #ddd; border-radius: 7px; } 
-
-input[name="ds"]:checked + label .check { position: relative; } 
-input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; background-color: var(--color-main); border: var(--color-main); border-radius: 7px; font-size: 25px; width: 27px; height: 27px; text-align: center; position: absolute; left: -1px; top: -1px; } 
-
-.locModal .addBtn { display: block; margin: 20px auto 0 auto; padding: 8px 15px; border-radius: 10px; font-size: 16px; font-family: pMedium; cursor: pointer; transition: all .3s; } 
-.addBtn:hover { background: #ffd4389f; } 
-
-.cls { position: absolute; padding: 10px; top: 25px; right: 25px; border-radius: 8px; transition: all .3s; cursor: pointer; } 
-.cls:hover { background: #8242f024; } 
-.clsBtn { width: 17px; height: 17px; background: url(../source/closeIco.png) center center; background-size: cover; cursor: pointer; } 
+.submitBtn { display: block; margin: 40px auto 0 auto; width: 20%; padding: 15px 0; background: #e8e8e8; border-radius: 10px; font-size: 17px; font-family: pSemi; transition: all .2s; cursor: pointer; } 
+.submitBtn:hover { background: #ffd4389f; } 
 
