--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -84,6 +84,9 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .dayOne .locAdd { margin-left: 43%; padding: 10px 15px; border-radius: 10px; background: #e8e8e8; font-size: 15px; font-family: pRegular; transition: all .2s; cursor: pointer; } 
 .locAdd:hover { background: #ffd4389f; } 
 
+.submitBtn { display: block; margin: 40px auto 0 auto; width: 20%; padding: 15px 0; background: #e8e8e8; border-radius: 10px; font-size: 17px; font-family: pSemi; transition: all .2s; cursor: pointer;}
+.submitBtn:hover { background: #ffd4389f;}
+
 /* --------------------- modal ---------------------------- */
 .modalBg { visibility: hidden; opacity: 0; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.599); z-index: 50; transition: all .3s ease; } 
 .modalBg.active { visibility: visible; opacity: 1; } 
