--- a/css/cWriteGrp.css
+++ b/css/cWriteGrp.css
@@ -59,18 +59,30 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 /*-------------------------------------------------*/
 
 
-.detailWrite { margin: 30px 0 70px 0; } 
+.detailWrite { padding: 25px 30px; margin: 30px 0 40px 0; border: 1px solid #ddd; border-radius: 10px; } 
 
-.imgUpAll { background: #FFF; padding: 30px 20px; margin: 1em auto; min-height: 300px; border: 1px solid #ddd; border-radius: 10px; } 
-.imgUpAll span { font-size: 18px; font-family: pSemi;}
-#fileInput { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip:rect(0,0,0,0); border: 0; } 
-.fileLabel { position: relative; margin-top: 20px; display: flex; align-items: center; justify-content: center; width: 100%; height: 100%; cursor: pointer; opacity: .5; transition: all .2s;} 
-.fileLabel::before { content: ""; position: absolute; top: 34%; left: 48%; width: 64px; height: 64px; background: url(../source/imgIco.png) center center; background-size: cover; opacity: .4; z-index: 1; } 
-.fileLabel:hover { opacity: 0.9;}
+.imgUpAll { background: #FFF; margin: 1em auto; min-height: 300px;  } 
+.imgUpAll span { margin-left: 5px; color: #333; font-size: 20px; font-family: pBold;}
+#fileInput { display: none; }
+.uploadedBtn { display: none;  margin-left: 10px; padding: 7px 12px; border-radius: 10px; color: #444; background: #e8e8e8; font-size: 15px; font-family: pSemi; transition: all .2s; cursor: pointer;}
+.uploadedBtn.uploaded { display: inline-block;  }
+.uploadedBtn.uploaded:hover { background: #ffd4389f; }
+.wrongTxt { width: 100%; color: #777; font-size: 20px; font-family: pBold; text-align: center;}
 
-.imgArea { display: flex; align-items: center; margin-top: 2em; width: 100%; height: 460px; overflow: hidden; background: #eee; border-radius: 8px; } 
+.fileLabel { position: relative; padding-top: 40px; display: flex; align-items: center; justify-content: center; background: #00000016; width: 100%; height: 100%; cursor: pointer; opacity: .5; transition: all .2s;} 
+.fileLabel::before { content: ""; position: absolute; top: 38%; left: 48%; width: 64px; height: 64px; background: url(../source/imgIco.png) center center; background-size: cover; opacity: .4; z-index: 1; } 
+.fileLabel:hover { background: #0000002b; opacity: 0.9;}
+
+.imgArea { display: flex; align-items: center; margin: 25px 0;  width: 100%; height: 460px; overflow: hidden; background: #eee; border-radius: 8px; } 
 .imgArea img { width: 100%; } 
 
-.submitBtn { display: block; margin: 40px auto 0 auto; width: 20%; padding: 15px 0; background: #e8e8e8; border-radius: 10px; font-size: 17px; font-family: pSemi; transition: all .2s; cursor: pointer; } 
+.titleBox input { margin: 10px 0 30px 0; padding: 10px 15px; width: 97%; border-radius: 8px; border: 1px solid var(--color-line); font-size: 18px; font-family: pMedium; transition: all .2s; }
+.titleBox input:focus { border-color: #2ce126; } 
+
+.contextBox { padding: 15px; border: 1px solid var(--color-line);border-radius: 10px; }
+.contextBox textarea { width: 100%; height: 300px;  font-family: pRegular; font-size: 16px; line-height: 140%; resize: none;}
+.contextBox:focus-within { border-color: #2ce126; } 
+
+.submitBtn { display: block; margin: 30px auto 50px auto; width: 20%; padding: 15px 0; background: #e8e8e8; border-radius: 10px; font-size: 17px; font-family: pSemi; transition: all .2s; cursor: pointer; } 
 .submitBtn:hover { background: #ffd4389f; } 
 
