--- a/css/sPosting.css
+++ b/css/sPosting.css
@@ -20,7 +20,18 @@ section { min-height: calc(100vh - 240px); padding: 0 12%; margin-top: 140px; }
 
 .saleSelec { margin-top: 15px; display: flex; align-items: center; }
 .saleSelec span { display: flex; align-items: center; justify-content: center; width: 260px; height: 50px; margin-right: 40px; background: #fff; border: 1px solid var(--color-line); background: #fff; border-radius: 5px; font-size: 15px; font-family: pBold;}
-.saleSelec .saleDiv { display: flex; align-items: center; width: 300px; height: 45px; padding-left: 60px; margin-right: 30px; border-radius: 5px; transition: all .2s;}
+
+.daySelecAll { width: 525px; display: flex; align-items: center; }
+.saleSelec input[name="saleDay"] { display: none; }
+input[name="saleDay"] + label { padding: 7px 15px; margin-right: 15px; position: relative; border-radius: 15px; cursor: pointer;}
+input[name="saleDay"] + label::before { content: '✓'; color: transparent; position: absolute; left: 10px; top: 7px; }
+input[name="saleDay"]:checked + label { padding-left: 30px; background: #eee;}
+input[name="saleDay"]:checked + label::before { color: #000; }
+
+.saleDrop { position: relative; width: 200px; display: inline-block; background-color: #fff; vertical-align: middle; font-size: 14px; padding: 10px; padding-right: 100px; margin-left: 30px; border-radius: 5px; text-indent: 0.01px; font-family: pRegular; text-overflow: ''; appearance: none; border: 1px solid #ddd; border-radius: 5px; cursor: pointer; } 
+.saleDrop::before { position: absolute; content: '\25BC'; width: 20px; height: 20px; right: 0; top: 0;  font-size: 15px; pointer-events: none; z-index: 10;}  
+
+
 /* ----------- date custom --------------*/
 
 .ui-datepicker { top: 650px !important; width: 250px !important; } 
@@ -74,9 +85,19 @@ border: 1px solid var(--color-main) !important; background: var(--color-main) !i
 .titleBox input { margin: 10px 0 30px 0; padding: 10px 15px; width: 97%; border-radius: 8px; border: 1px solid var(--color-line); font-size: 18px; font-family: pMedium; transition: all .2s; }
 .titleBox input:focus { border-color: #2ce126; } 
 
-.contextBox { padding: 15px; border: 1px solid var(--color-line);border-radius: 10px; }
+.contxtAll span { margin-left: 5px; color: #333; font-size: 20px; font-family: pBold;}
+.contextBox { padding: 15px; margin: 25px 0; border: 1px solid var(--color-line);border-radius: 10px; }
 .contextBox textarea { width: 100%; height: 300px;  font-family: pRegular; font-size: 16px; line-height: 140%; resize: none;}
 .contextBox:focus-within { border-color: #2ce126; } 
+
+.infoBottom { display: flex; align-items: center; }
+.infoBottom div { width: 45%; margin-right: 50px; display: flex; align-items: center;}
+.infoBottom div span { margin-right: 30px; font-family: pBold; font-size: 17px;}
+.infoBottom .writer { width: 380px; height: 40px; border-radius: 5px; border: 1px solid #ddd; background: #f8f8f8;}
+.infoBottom input[name="price"] {  width: 380px; height: 40px; padding: 0 10px; border-radius: 5px; border: 1px solid #ddd; font-family: pRegular; }
+
+input[name="price"]::-webkit-outer-spin-button,
+input[name="price"]::-webkit-inner-spin-button {appearance: none;}
 
 .submitBtn { display: block; margin: 30px auto 50px auto; width: 20%; padding: 15px 0; background: #e8e8e8; border-radius: 10px; font-size: 17px; font-family: pSemi; transition: all .2s; cursor: pointer; } 
 .submitBtn:hover { background: #ffd4389f; } 
