--- a/css/cGroDetail.css
+++ b/css/cGroDetail.css
@@ -1,54 +1,51 @@
-section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; margin-bottom: 100px;}
-.postingWrap{display: flex; justify-content: center;}
-.postingInner{width: 80%;}
-.postImgCon {width: 100%; height: 450px; margin: 0 auto; border-radius: 15px; overflow: hidden; position: relative;}
-.postImgCon img { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: auto;  height: 100%; min-width: 100%; object-fit: cover; z-index: -1; 
-border-radius: 15px;}
+section { min-height: calc(100vh - 240px); padding: 0 13%; margin: 200px 0 100px 0; } 
+.postingWrap { display: flex; justify-content: center; } 
+.postingInner { width: 100%; } 
+.postImgCon { width: 100%; height: 450px; margin: 0 auto; border-radius: 15px; overflow: hidden; position: relative; } 
+.postImgCon img { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: auto; height: 100%; min-width: 100%; object-fit: cover; border-radius: 15px; } 
 
-.postingBtn{display: flex; align-items: center; justify-content: end; padding-top: 25px;}
-.postingBtn button{width: 52px; height: 30px; border-radius: 5px; background-color: var(--color-line); font-family: pMedium; font-size: 14px; color: rgb(27, 27, 27);margin-left: 10px;
-cursor: pointer;}
-.postingBtn button:hover{background-color: #55ed50aa; transition: all .3s;}
+.postingBtn { display: flex; align-items: center; justify-content: end; padding-top: 25px; } 
+.postingBtn button { width: 52px; height: 30px; border-radius: 5px; background-color: var(--color-line); font-family: pMedium; font-size: 14px; color: rgb(27, 27, 27); margin-left: 10px;cursor: pointer; } 
+.postingBtn button:hover { background-color: #55ed50aa; transition: all .3s; } 
 
-.postContent{ display: flex; margin-top: 25px; justify-content: space-between;}
-.pLeft{ width: 800px;}
-.pLeft h1{font-family: pSemi; font-size: 25px;}
-.postInfo{margin-top: 35px; padding: 20px 0px; width: 800px; border: solid 1px var(--color-line); border-radius: 5px;}
-.postInfo .lmd{display: flex; -webkit-box-align: center; align-items: center; font-family: pMedium; font-size: 17px;}
-.postInfo .lmd span{margin: 0 0 0 10px;}
-.postInfo .lmd p{ color: rgb(84, 84, 84); padding-left: 20px;}
-.postInfo .dDetail{display: flex; align-items: center; margin-top: 10px;}
-.postInfo .dDetail img{width: 18px; margin-bottom: 2px; padding-left: 20px;}
-.postInfo .dDetail span{padding: 0 0 0 10px; font-family: pLight; font-size: 16px;}
+.postContent { display: flex; margin-top: 25px; justify-content: space-between; } 
+.pLeft { width: 800px; } 
+.pLeft h1 { font-family: pSemi; font-size: 25px; } 
+.postInfo { margin-top: 35px; padding: 20px 0px; width: 800px; border: solid 1px var(--color-line); border-radius: 5px; } 
+.postInfo .lmd { display: flex; -webkit-box-align: center; align-items: center; font-family: pMedium; font-size: 17px; } 
+.postInfo .lmd span { margin: 0 0 0 10px; } 
+.postInfo .lmd p { color: rgb(84, 84, 84); padding-left: 20px; } 
+.postInfo .dDetail { display: flex; align-items: center; margin-top: 10px; } 
+.postInfo .dDetail img { width: 18px; margin-bottom: 2px; padding-left: 20px; } 
+.postInfo .dDetail span { padding: 0 0 0 10px; font-family: pLight; font-size: 16px; } 
 
-.postText{margin-top: 31px; font-size: 16px; font-family: pLight; line-height: 1.5em; min-height: 100px;  word-break: break-all;} 
+.postText { margin-top: 31px; font-size: 16px; font-family: pLight; line-height: 1.5em; min-height: 100px; word-break: break-all; } 
 
-.postDV{margin-top: 100px; display: flex; font-family: pLight; font-size: 15px; color: rgb(62, 62, 62);}
-.postDV span{padding-right: 5px;}
-.postDV p{padding: 0 5px 0 15px;}
+.postDV { margin-top: 100px; display: flex; font-family: pLight; font-size: 15px; color: rgb(62, 62, 62); } 
+.postDV span { padding-right: 5px; } 
+.postDV p { padding: 0 5px 0 15px; } 
 
-.pRight{width: 320px;}
-.wUser{border: solid 1px var(--color-line); width: 100%; height: 185px; border-radius: 10px;}
-.wUserInner{width: 85%; margin: 23px auto;}
-.wUserInfo{width: 70%; display: flex; align-items: center;}
-.wUserInfo img{width: 53px; border-radius: 100%;}
-.ngc{display: flex; flex-direction: column; padding-left: 10px;}
-.ngc p{font-family: pBold; font-size: 18px;}
-.ag{display: flex; padding-top: 5px;}
-.ag p{font-family: pMedium; font-size: 15px; color: rgb(43, 43, 43);}
-.wUserInner button{width: 100%; height: 55px; border-radius: 10px; font-family: pBold; font-size: 16px; background-color: var(--color-main); 
-color: white; margin-top: 28px; cursor: pointer;}
+.pRight { width: 320px; } 
+.wUser { border: solid 1px var(--color-line); width: 100%; height: 185px; border-radius: 10px; } 
+.wUserInner { width: 85%; margin: 23px auto; } 
+.wUserInfo { width: 70%; display: flex; align-items: center; } 
+.wUserInfo img { width: 53px; border-radius: 100%; } 
+.ngc { display: flex; flex-direction: column; padding-left: 10px; } 
+.ngc p { font-family: pBold; font-size: 18px; } 
+.ag { display: flex; padding-top: 5px; } 
+.ag p { font-family: pMedium; font-size: 15px; color: rgb(43, 43, 43); } 
+.wUserInner button { width: 100%; height: 55px; border-radius: 10px; font-family: pBold; font-size: 16px; background-color: var(--color-main);color: white; margin-top: 28px; cursor: pointer; }  
 
-.joinMem{width: 100%; border: solid 1px var(--color-line); margin-top: 20px; border-radius: 10px;}
-.jMemInner{width: 85%; margin: 23px auto;}
-.jMemCnt{display: flex; align-items: center;}
-.jMemCnt span{padding-left: 10px; font-family: pMedium; font-size: 15px; color: var(--color-main);}
-.jMemCnt p{font-family: pBold; font-size: 18px;}
-.memInfoWrap{margin-top: 20px;}
-.memInfo{display: flex; margin-bottom: 10px;}
-.memInfo img{width: 53px; border-radius: 100%; }
-.memNg{display: flex; align-items: center; padding-left: 13px;}
-.memNg span{padding-right: 5px;}
+.joinMem { width: 100%; border: solid 1px var(--color-line); margin-top: 20px; border-radius: 10px; } 
+.jMemInner { width: 85%; margin: 23px auto; } 
+.jMemCnt { display: flex; align-items: center; } 
+.jMemCnt span { padding-left: 10px; font-family: pMedium; font-size: 15px; color: var(--color-main); } 
+.jMemCnt p { font-family: pBold; font-size: 18px; } 
+.memInfoWrap { margin-top: 20px; } 
+.memInfo { display: flex; margin-bottom: 10px; } 
+.memInfo img { width: 53px; border-radius: 100%; } 
+.memNg { display: flex; align-items: center; padding-left: 13px; } 
+.memNg span { padding-right: 5px; } 
 
 
 
