--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -33,7 +33,7 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 .postLoc { position: absolute; top: 26%; left: 5%; padding: 8px 18px 8px 30px; display: flex; align-items: center; justify-content: space-between; background: #fff;font-size: 13px; border-radius: 10px; box-shadow: 1px 1px 4px #747474ac; line-height: 125%; z-index: 10; } 
 .postLoc::before { position: absolute; top: 25%; left: 10%; content: ''; background: url(../source/loc.png) center center; background-size: cover; width: 15px; height: 15px; } 
 
-.postBottom { height: 70px; display: flex; flex-direction: column; z-index: 100; width: 330px; margin: 15px auto; }
+.postBottom { height: 70px; display: flex; flex-direction: column; width: 330px; margin: 15px auto 15px 15px; }
 .postBottom h3 {  width: calc(100vw * 320 / 1920); font-size: 18px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } 
 .postBottom p {  width: calc(100vw * 320 / 1920); font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; overflow: hidden; display: -webkit-box; margin-top: 10px;-webkit-line-clamp: 2; -webkit-box-orient: vertical; text-overflow: ellipsis; } 
 
